# IPC-linux

./: README.md
ipc/: README  configure.ac
ipc/src/: Makefile.am  popen1.c  popen2.c
ipc/src/fifo/: Makefile.am  client.c  client.h  fifo1.c  fifo2.c  fifo3.c  fifo4.c  server.c
ipc/src/pipe/: Makefile.am  pipe1.c  pipe2.c  pipe3.c  pipe4.c  pipe5.c
ipc/src/popen/: Makefile.am  popen3.c  popen4.c
