dnl Process this file with autoconf to produce a configure script.
AC_INIT([IPC], [0.0.2], [pabitraadhikari@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_PROG_CC 
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
 src/popen/Makefile
 src/pipe/Makefile
 src/fifo/Makefile
])
AC_OUTPUT
